Added digital clock changes

--- a/SimplePage.html
+++ b/SimplePage.html
@@ -7,7 +7,8 @@
             <h2>Header</h2>
         </header>
         <div class="content">
-            Content Area
+            <label>TIME : </label>
+            <span id = "time"></span>
         </div>
         <footer class="footer">
             <h2>Footer</h2>
