Added sorting function changes

--- a/SimplePage.html
+++ b/SimplePage.html
@@ -8,7 +8,9 @@
         </header>
         <div class="content">
             <label>TIME : </label>
-            <span id = "time"></span>
+            <span id = "time"></span> </br>
+            <label>Sorted array is : </label>
+            <span id = "sort"></span>
         </div>
         <footer class="footer">
             <h2>Footer</h2>
